[gd_scene load_steps=2 format=2]

[ext_resource path="res://app_info.gd" type="Script" id=1]

[node name="app_info" type="Panel"]
margin_right = 272.0
margin_bottom = 144.0
script = ExtResource( 1 )

[node name="title" type="Label" parent="."]
anchor_right = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 26.0
text = "App Information:"
align = 1
valign = 1

[node name="vbox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 32.0
margin_right = -8.0
margin_bottom = -8.0

[node name="product_tab" type="HBoxContainer" parent="vbox"]
margin_right = 256.0
margin_bottom = 18.0

[node name="info_label" type="Label" parent="vbox/product_tab"]
margin_right = 52.0
margin_bottom = 18.0
text = "Product:"

[node name="info" type="Label" parent="vbox/product_tab"]
margin_left = 56.0
margin_right = 81.0
margin_bottom = 18.0
text = "N/A"

[node name="version_tab" type="HBoxContainer" parent="vbox"]
margin_top = 22.0
margin_right = 256.0
margin_bottom = 40.0

[node name="info_label" type="Label" parent="vbox/version_tab"]
margin_right = 50.0
margin_bottom = 18.0
text = "Version:"

[node name="info" type="Label" parent="vbox/version_tab"]
margin_left = 54.0
margin_right = 79.0
margin_bottom = 18.0
text = "N/A"

[node name="info_transition" type="Label" parent="vbox/version_tab"]
margin_left = 83.0
margin_right = 86.0
margin_bottom = 18.0
text = ":"

[node name="info_msg" type="Label" parent="vbox/version_tab"]
margin_left = 90.0
margin_right = 115.0
margin_bottom = 18.0
text = "N/A"

[node name="author_tab" type="HBoxContainer" parent="vbox"]
margin_top = 44.0
margin_right = 256.0
margin_bottom = 62.0

[node name="info_label" type="Label" parent="vbox/author_tab"]
margin_right = 45.0
margin_bottom = 18.0
text = "Author:"

[node name="info" type="Label" parent="vbox/author_tab"]
margin_left = 49.0
margin_right = 74.0
margin_bottom = 18.0
text = "N/A"

[node name="info_transition" type="Label" parent="vbox/author_tab"]
margin_left = 78.0
margin_right = 81.0
margin_bottom = 18.0
text = ":"

[node name="info_web" type="Label" parent="vbox/author_tab"]
margin_left = 85.0
margin_right = 110.0
margin_bottom = 18.0
text = "N/A"

[node name="copyright_tab" type="HBoxContainer" parent="vbox"]
margin_top = 66.0
margin_right = 256.0
margin_bottom = 84.0

[node name="info_label" type="Label" parent="vbox/copyright_tab"]
margin_right = 64.0
margin_bottom = 18.0
text = "Copyright:"

[node name="year_1" type="Label" parent="vbox/copyright_tab"]
margin_left = 68.0
margin_right = 93.0
margin_bottom = 18.0
text = "N/A"

[node name="year_transition" type="Label" parent="vbox/copyright_tab"]
margin_left = 97.0
margin_right = 110.0
margin_bottom = 18.0
text = " - "

[node name="year_2" type="Label" parent="vbox/copyright_tab"]
margin_left = 114.0
margin_right = 139.0
margin_bottom = 18.0
text = "N/A"
